# Cmake-examples

01-basic/: CMakeLists.txt  main.cpp
02-hello-headers/: CMakeLists.txt
02-hello-headers/include/: Hello.h
02-hello-headers/src/: Hello.cpp  main.cpp
03-static-library/: CMakeLists.txt
03-static-library/src/: Hello.cpp
04-shared-library/: CMakeLists.txt
04-shared-library/src/: Hello.cpp
05-installing/: CMakeLists.txt
06-build-type/: CMakeLists.txt
07-compile-flags/: CMakeLists.txt
08-third-party-library/: CMakeLists.txt
10-building-with-ninja/: CMakeLists.txt
11-imported-targets/: CMakeLists.txt
12-cpp-standard/: CMakeLists.txt
13-sub-projects/: CMakeLists.txt
13-sub-projects/sublibrary2/: CMakeLists.txt
14-code-generation/: CMakeLists.txt
15-code-generation-protobuf/: CMakeLists.txt
16-installer-deb/: CMakeLists.txt
17-clang-analyzer/: CMakeLists.txt
18-unit-testing-boost/: CMakeLists.txt
cmake_basics_01/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_world  hello_world.cpp
cmake_basics_02/: CMakeLists.txt
cmake_basics_02/src/: hello.cpp  main.cpp
cmake_basics_03/: CMakeLists.txt
cmake_basics_03/src/: main.cpp
cmake_basics_04/: CMakeLists.txt
cmake_basics_04/include/shared/: Hello.h
cmake_basics_04/src/: Hello.cpp  main.cpp
cmake_basics_05/: CMakeLists.txt
cmake_basics_05/include/installing/: Hello.h
cmake_basics_05/src/: Hello.cpp  main.cpp
cmake_basics_06/: CMakeLists.txt  main.cpp
cmake_basics_07/: CMakeLists.txt
cmake_basics_08/: CMakeLists.txt  main.cpp
cmake_basics_09/: CMakeLists.txt  main.cpp
cmake_basics_09/build.clang/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_cmake_bin
cmake_basics_10/: CMakeLists.txt
cmake_basics_12/: CMakeLists.txt
cmake_basics_13/: CMakeLists.txt
cmake_basics_13/subbinary/: CMakeLists.txt  main.cpp
cmake_basics_13/sublibrary1/: CMakeLists.txt
cmake_basics_13/sublibrary1/include/: sublibrary1.h
cmake_basics_13/sublibrary1/src/: sublibrary1.cpp
cmake_basics_13/sublibrary2/: CMakeLists.txt
cmake_basics_13/sublibrary2/include/: sublibrary2.h
cmake_basics_13/sublibrary2/src/: sublibrary2.cpp
cmake_basics_14/: CMakeLists.txt  template.cpp.in  variables.cmake
cmake_basics_15/: CMakeLists.txt  main.cpp  my_message.pb.cc  my_message.pb.h  my_message.proto
cmake_basics_16/: CMakeLists.txt  main.cpp  my-program.desktop
cmake_basics_17/: CMakeLists.txt  main.cpp
cmake_basics_18/: CMakeLists.txt  test.cpp
